
    * src/sp-item.cpp: the item's arenaitems shouldn't be destroyed until
	  its children have had a chance to clean up

    * src/sp-object.cpp: fix sp_object_reorder() to correctly handle
	  next == NULL

	* src/sp-item.cpp, src/sp-object-group.cpp, src/sp-object-repr.cpp,
      src/sp-object.cpp, src/sp-object.h, src/sp-text.cpp, src/sp-use.cpp:
	  finished transition to SPObject::children

2004-03-06  MenTaLguY  <mental@rydia.net>

    * src/ast/*: initial work on AST code

	* src/libnr/nr-convex-hull-ops.h, src/libnr/nr-convex-hull.h,
	  src/libnr/nr-matrix-fns.h, src/libnr/nr-maybe.h,
	  src/libnr/nr-rect-ops.h:
	  basic cleanups and work on NR::ConvexHull

    * src/document.cpp, src/gradient-chemistry.cpp,
	  src/selection-chemistry.cpp, src/selection.cpp, src/sp-clippath.cpp,
	  src/sp-defs.cpp, src/sp-defs.h, src/sp-gradient.cpp, src/sp-gradient.h,
	  src/sp-item-group.cpp, src/sp-item-group.h, src/sp-item.cpp,
	  src/sp-item.h, src/sp-mask.cpp, src/sp-namedview.cpp,
	  src/sp-object-group.cpp, src/sp-object-group.h, src/sp-object-repr.cpp,
	  src/sp-object.cpp, src/sp-object.h, src/sp-pattern.cpp, src/sp-pattern.h,
	  src/sp-root.cpp, src/sp-text.cpp, src/sp-text.h,
	  src/widgets/gradient-vector.cpp:

	  children are now uniformly handled by SPObject

2004-03-05  bulia byak <bulia@users.sourceforge.net>

	* src/desktop.cpp src/preferences-skeleton.h: Autoscroll now accepts
	distance-from-edge parameter, may be negative, default is
	options.autoscrolldistance = -10

	* src/style.cpp src/style.h src/document.cpp: Store uri for paintsever and
	serialize it back instead of paintserver id. find_items functions do not find
	insensitive items by default.

	* src/sp-item.cpp: tentative fix: do not remove style attribute if
	write_difference fails or object has no parent

	* src/desktop-events.cpp: transientize guide dialog

	* splivarot.cpp, livarot/*: fred's new rasterizer, fixes

	* src/widgets/gradient-vector.cpp: fix 906301
